# accxx

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
cmake/: accxxConfig.cmake.in
include/accxx/: error_handler.hpp
include/accxx/cl/: call.hpp  cl_error_code.hpp  error_handler.hpp  system_error.hpp
include/accxx/cuda/: call.hpp  cuda_device_guard.hpp  error_handler.hpp  system_error.hpp
scripts/actions/: install_cuda_ubuntu.sh
src/: CMakeLists.txt
src/cl/: CMakeLists.txt  cl_error_code.cpp  error_handler.cpp  system_error.cpp
src/cuda/: CMakeLists.txt  error_handler.cpp  system_error.cpp
test/: CMakeLists.txt
test/cl/: CMakeLists.txt  call.cpp  error_handler.cpp  system_error.cpp
test/cuda/: CMakeLists.txt  call.cpp  call.cu  cuda_device_guard.cpp  error_handler.cpp  system_error.cpp
